--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,8 @@
-service:
+services:
   teslodb:
     image: mongo:5.0.0
     container_name: teslo-database
     ports:
       - 27017:27017
+    volumes:
       - ./mongo:/data/db
