--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@mui/x-data-grid": "^5.17.8",
+    "js-cookie": "^3.0.1",
     "mongoose": "^6.7.0",
     "next": "12.3.1",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
